# shapes-compiler

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: ci.yml
include/: args.h  ast.h  ast_decls.h  ast_errors.h  common.h  cst.h  cst_decls.h  cst_errors.h  ir.h  parse_tree_common.h  semantic_analysis.h  syntactic_analysis.h
src/: ast.cpp  common.cpp  cst.cpp  ir.cpp  lexer.l  main.cpp  parser.y  semantic_analysis.cpp
testcases/case_studies/: currency.shp  currency2.shp  doors.shp  stickmen.shp
testcases/execution/: test_binary.shp
testcases/parse_error/: first_pool_param.shp  none_formal_pool_param.shp  old_bounds.shp
testcases/semantic_error/: bound_error.shp  class_layout_clash.shp  duplicate_class.shp  duplicate_layout.shp  duplicate_method.shp  expressions.shp  expressions2.shp  incorrect_bound.shp  layout_missing_field.shp  lvalue.shp  no_pool_params.shp  no_return.shp  no_return_if.shp  null1.shp  null2.shp  null3.shp  return_expr.shp  return_void.shp  type_error.shp  type_error2.shp  type_error3.shp  uninit_var.shp  uninit_var_if.shp
testcases/valid/: assignment.shp  casts.shp  comments.shp  decls.shp  empty_class.shp  expressions.shp  field_none.shp  fields.shp  foreach_pool.shp  foreach_range.shp  if.shp  linked_list.shp  literal_suffixes.shp  null.shp  obj_assign.shp  obj_field_assign.shp  obj_foreach_range.shp  op_assignment.shp  return_if.shp  simple_return.shp  test.shp  transitive_closure.shp  two_classes.shp  uninit_var_if.shp  while.shp
testing/: tests.cpp
